--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ endif()
 if(build_tests)
 message(STATUS "Building ecs tests")
 enable_testing()
+add_compile_definitions(_TESTING)
 add_subdirectory(Catch2)
 add_subdirectory(tests)
 endif()
